<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/back" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_above="@id/progress_bar"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/avatar" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_above="@+id/button_upload"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp" />

        <Button
            android:id="@+id/button_choose_image"
            style="@style/Widget.LostFound.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Choose file"
            app:strokeColor="@color/button"
            app:strokeWidth="1dp"/>

        <Button
            android:id="@+id/buttonCamera"
            style="@style/Widget.LostFound.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Open Camera"
            app:strokeColor="@color/button"
            app:strokeWidth="1dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextName"
                android:hint="@string/hint_enter_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSchool"
                android:hint="@string/hint_enter_school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextId"
                android:hint="@string/hint_enter_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPhoneNum"
                android:hint="@string/hint_enter_phone_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSave"
            style="@style/Widget.LostFound.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Save Information"
            app:strokeColor="@color/button"
            app:strokeWidth="1dp"/>

    </LinearLayout>

</ScrollView>